--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,7 +17,6 @@
         <item>SwipeRefresh下拉和上拉</item>
         <item>Viewpager切换动画</item>
         <item>ViewPagerIndicator</item>
-        <item>BackgroundPagerActivity</item>
         <item>Volley学习</item>
         <item>stickyHeaderListView</item>
         <item>树形结构</item>
@@ -38,6 +37,7 @@
         <item>多行文本折叠展开效果</item>
         <item> Android ViewDragHelper</item>
         <item>抽奖盘</item>
+        <item>属性动画改变x,y坐标，不断重绘的LoadingView</item>
     </string-array>
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
@@ -56,7 +56,6 @@
         <item>"com.qingfengmy.ui.SwipeRefreshActivity"</item>
         <item>"com.qingfengmy.ui.PageTransformerActivity"</item>
         <item>"com.qingfengmy.ui.ViewPagerIndicatorActivity"</item>
-        <item>"com.qingfengmy.ui.BackgroundPagerActivity"</item>
         <item>"com.qingfengmy.ui.VolleyActivity"</item>
         <item>"com.qingfengmy.ui.StickyHeaderActivity"</item>
         <item>"com.qingfengmy.ui.TreeActivity"</item>
@@ -77,6 +76,7 @@
         <item>"com.qingfengmy.ui.MoreTextViewActivity"</item>
         <item>"com.qingfengmy.ui.ViewDragHelperActivity"</item>
         <item>"com.qingfengmy.ui.LuckPanActivity"</item>
+        <item>"com.qingfengmy.ui.LoadingActivity"</item>
     </string-array>
     <string-array name="blend_modes">
         <item>Add</item>
