--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <style name="AppTheme" parent="BaseAppTheme">
-        <!-- 底部导航栏颜色 -->
-        <item name="android:navigationBarColor">@color/primary</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 </resources>
