--- a/app/src/main/res/drawable/logo.xml
+++ b/app/src/main/res/drawable/logo.xml
@@ -6,7 +6,7 @@
         </shape>
     </item>
 
-    <item>
+    <item android:bottom="180dp">
         <bitmap
             android:gravity="center"
             android:src="@drawable/ic_launcher" />
